# nova5_mandarin_picker

./: .gitignore  README_DEPLOY.md
.tmp/: v4py.txt
deploy/: Dockerfile  env.sh  fake_servo_server.py  fake_vision_publisher.py  run-gazebo.sh  run.sh  setup.sh  start-desktop.sh  stop.sh
deploy/dobot_interfaces/: CMakeLists.txt  package.xml
deploy/dobot_interfaces/action/: ServoControl.action
