<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_interfaces</name>
  <version>0.0.1</version>
  <description>
    Custom interfaces for the Nova5 mandarin picker. Provides the ServoControl
    action used by the picking client for the gripper. This package is NOT part
    of Dobot's official ROS 2 distribution — it is reconstructed so the client's
    `from dobot_interfaces.action import ServoControl` import resolves in
    simulation.
  </description>
  <maintainer email="neilhuang007@gmail.com">leoli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
